# maia_packages

./: .gitignore  .run_maia.sh.swo  README.md  run_maia.sh
Arduino/hover-control/: hover-control.cpp  hover-control.ino
launch/: run_detector.launch
maia_gui/: CMakeLists.txt  package.xml
maia_gui/launch/: maia_gui.launch
maia_gui/rviz_configs/: your_rviz_config.rviz
maia_gui/scripts/: maia_gui_v0.py  maia_gui_v0.ui  maia_hmi_main.py  makeui.sh  python_rviz_tools.py
maia_powerchair/: CMakeLists.txt  README.md  maia-launch.launch  package.xml
maia_powerchair/launch/: aruco-test.launch  maia-launch.launch  maia-nav.launch  obj-detector.launch
maia_powerchair/nav_params/: all_nav_params.yaml
maia_powerchair/params/: camera.yaml  costmap_common_params.yaml  costmap_params.yaml  global_costmap_params.yaml  laser_filter_params.yaml  local_costmap_params.yaml  planners_params.yaml
maia_powerchair/rviz/: default.rviz
msg_common/: CMakeLists.txt  package.xml
msg_common/msg/: Object_3d.msg
perception_pkgs/object_detector/: .gitignore  CMakeLists.txt  package.xml  requirements.txt  (+1 more)
perception_pkgs/tcp_link/: CMakeLists.txt  package.xml
perception_pkgs/tcp_link/data/: data09_05_24_11_17_02.csv  data09_06_24_10_34_40.csv  data09_06_24_10_54_49.csv
perception_pkgs/tcp_link/model/: transformer_eye.pth
perception_pkgs/tcp_link/scripts/: tcp_link.py  tcp_link_old.py  tcp_link_old2.py
perception_pkgs/tcp_link_hybrid/: CMakeLists.txt  package.xml
perception_pkgs/tcp_link_hybrid/scripts/: tcp_link_hybrid.py
perturbator/: CMakeLists.txt  package.xml
(+20 files in other folders)
